--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     <h1>Ūla Jezerskaitė</h1>
     <h5>Informaciniu sistemu inzinerija</h5>
     <div>
-        <p> Dėl kolių, neturiu laiko žaist hogwarts legacy...</p>
+        <p> <u>Dėl kolių, neturiu laiko žaist hogwarts legacy...</u></p>
         <a href="https://www.w3schools.com/html/">nuoroda</a>
         <img src="images\two-professional-programmers-cooperating-developing-programmi-programming-website-working-software-develop-company-132851915.webp" alt="svajoniu_darbas">
     </div>
 
 
      <ol>
-        <li>Dirbtinis intelektas</li>
-        <li>Kibernetinis saugumas</li>
+        <li><strong>Dirbtinis intelektas</strong></li>
+        <li><b>Kibernetinis saugumas</b></li>
         <li>Duomenu analitika</li>
      </ol>
      <ul>
-        <li>Programuoti java kalba</li>
-        <li>Projektuoti mikroschemas</li>
+        <li><em>Programuoti java kalba</em></li>
+        <li><i>Projektuoti mikroschemas</i></li>
         <li>Suprasti kaip veikia elektra</li>
      </ul>
 
@@ -31,3 +31,10 @@
 </html>
 <!--<!DOCTYPE html>nurdo, kad bus html failas, <html> yra pagrindinsi nurodymas?<head> gali talpinti pavadinima, kodavima, stilius ir t.t.  -->
 <!-- <meta> meta duomenu nurodymas, <title> dokumento pavadinimas, <body> viskas kas bus rodoma svetainej -->
+<!-- <div> sugrupuoja elementus -->
+    <!-- 
+    strong svetaineja tai saugoma kaip svarbus tekstas
+    b tiesiog vaizdiskai paryskinta -->
+    <!-- em pabrezia ir kitokia intonacija
+     i tik vizualiai pasvires vaizdas -->
+     <!-- <u> gali klaidinti nes atrodo kaip linkas, gali but kitaip perskaitytas -->
