--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
+  <link href="assets/css/custom.css" rel="stylesheet">
   <!-- =======================================================
   * Template Name: MyResume
   * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
@@ -395,7 +395,6 @@
         <h3>Vaizdo įrašas iš Pexels</h3>
         <video width="100%" controls>
           <source src="assets/media/typing-video.mp4" type="video/mp4">
-          Jūsų naršyklė nepalaiko vaizdo įrašo.
         </video>
         <p class="mt-2">Asmens darbo prie kompiuterio vaizdo įrašas</p>
       </div>
@@ -431,7 +430,38 @@
     </div><!-- End Service Item -->
 
   </div>
-
+  <table class="services-table">
+    <tr>
+        <th>Paslauga</th>
+        <th>Aprašymas</th>
+        <th>Kaina</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Tinklalapių programavimas</td>
+        <td>Tik asmeninių svetainių dizaino kūrimas</td>
+        <td>100 Eur</td>
+      </tr>
+      <tr>
+        <td>Elektroninės parduotuvės kūrimas</td>
+        <td>Pilnas e-commerce sprendimas su mokėjimų sistema</td>
+        <td>500 Eur</td>
+      </tr>
+      <tr>
+        <td>SEO optimizavimas</td>
+        <td>Paieškos sistemų optimizacija ir pozicijų gerinimas</td>
+        <td>200 Eur</td>
+      </tr>
+      <tr>
+        <td>Priežiūra ir palaikymas</td>
+        <td>Mėnesinė svetainės atnaujinimų ir priežiūros paslauga</td>
+        <td>50 Eur/mėn.</td>
+      </tr>
+    </tbody>
+  </table>
+   <thead>
+      
 </div><!-- /Services Section -->
 
     <!-- Testimonials Section -->
