--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <!-- About Section -->
     <section id="about" class="about section">
-
+      
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
@@ -126,6 +126,7 @@
         </div>
 
       </div>
+      <div class="figure"></div>
 
     </section><!-- /About Section -->
 
@@ -436,7 +437,7 @@
         <th>Aprašymas</th>
         <th>Kaina</th>
       </tr>
-    </thead>
+    <!-- </thead> -->
     <tbody>
       <tr>
         <td>Tinklalapių programavimas</td>
@@ -460,7 +461,7 @@
       </tr>
     </tbody>
   </table>
-   <thead>
+   <!-- <thead> -->
       
 </div><!-- /Services Section -->
 
@@ -707,7 +708,7 @@
   <a href="#" id="scroll-top" class="scroll-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
   <!-- Preloader -->
-  <div id="preloader"></div>
+  <div class="loader" id="preloader"></div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
