--- a/index.html
+++ b/index.html
@@ -639,31 +639,76 @@
           </div>
 
           <div class="col-lg-8">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form  class="php-email-form" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
                   <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
                 </div>
 
+                <div class="col-md-6">
+                  <input type="text" name="last-name" class="form-control" placeholder="Your Last Name" required="">
+                </div>
+
                 <div class="col-md-6 ">
                   <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
                 </div>
 
-                <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+                <div class="col-md-6">
+                  <input type="text" name="number" class="form-control" placeholder="Your Phone Number" required="">
                 </div>
 
                 <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
+                  <input type="text" class="form-control" name="address" placeholder="Your Address" required="">
                 </div>
+
+                <!-- <div class="col-md-12">
+                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
+                </div> -->
+                            <div class="col-md-12">
+              <h5 class="mt-4 mb-3">Vertinimo klausimai (1-10)</h5>
+              
+              <div class="mb-4">
+                <p class="mb-2">1. Kaip vertinate CV?</p>
+                <input type="range" name="rating_service1" min="1" max="10" value="5" class="form-range" id="slider1">
+                <div class="d-flex justify-content-between">
+                  <small>1 (Blogai)</small>
+                  <small id="serviceValue1">5</small>
+                  <small>10 (Puikiai)</small>
+                </div>
+              </div>
+
+              <div class="mb-4">
+                <p class="mb-2">2. Ar daug info truksta CV?</p>
+                <input type="range" name="rating_service2" min="1" max="10" value="5" class="form-range" id="slider2">
+                <div class="d-flex justify-content-between">
+                  <small>1 (Ne)</small>
+                  <small id="serviceValue2">5</small>
+                  <small>10 (Taip)</small>
+                </div>
+              </div>
+
+              <div class="mb-4">
+                <p class="mb-2">3. Ar rekomenduotumėte mane?</p>
+                <input type="range" name="rating_service3" min="1" max="10" value="5" class="form-range" id="slider3">
+                <div class="d-flex justify-content-between">
+                  <small>1 (Ne)</small>
+                  <small id="serviceValue3">5</small>
+                  <small>10 (Taip)</small>
+                </div>
+              </div>
+
+            </div>
+
 
                 <div class="col-md-12 text-center">
                   <div class="loading">Loading</div>
                   <div class="error-message"></div>
                   <div class="sent-message">Your message has been sent. Thank you!</div>
 
-                  <button type="submit">Send Message</button>
+                  <button type="submit">Submit</button>
+                  <div id="results" style="display:none; margin-top: 30px;"></div>
+
                 </div>
 
               </div>
@@ -724,6 +769,7 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/custom.js"></script>
 
 </body>
 
