--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
           </div>
 
           <div class="col-lg-8">
-            <form  class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+            <form  class="mano-forma" data-aos="fade-up" data-aos-delay="200">
               <div class="row gy-4">
 
                 <div class="col-md-6">
@@ -647,7 +647,7 @@
                 </div>
 
                 <div class="col-md-6">
-                  <input type="text" name="last-name" class="form-control" placeholder="Your Last Name" required="">
+                  <input type="text" name="lastName" class="form-control" placeholder="Your Last Name" required="">
                 </div>
 
                 <div class="col-md-6 ">
@@ -702,9 +702,9 @@
 
 
                 <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
+                  <!-- <div class="loading">Loading</div>
                   <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                  <div class="sent-message">Your message has been sent. Thank you!</div> -->
 
                   <button type="submit">Submit</button>
                   <div id="results" style="display:none; margin-top: 30px;"></div>
